# fpga-scope

./: .gitignore  NOTICE  README.md
.github/workflows/: ci.yml
docs/: COMPARISON.md  DESIGN.md  INTERFACES.md  PLAN.md  RELEASE_v1.0.0.md  VERIFICATION.md
docs/captures/: axc3000_hyperram.gtkw  axc3000_hyperram_cs.dump.txt  axc3000_hyperram_cs.sr  axc3000_hyperram_cs.vcd  axc3000_hyperram_cs_focus.vcd
formal/: fml_scope_top.sv  scope_core.sby  scope_core_fchk.sv  scope_rle.sby  scope_top.sby  scope_top_fchk.sv
fpga/axc3000/: README.md  jtag_decode.py  probes.json  reconstruct.py  scope_bw.qpf  scope_bw.qsf  top_scope.sv
fpga/util_sweep/: README.md  quartus_sweep.sh  scope_util.qpf  scope_util.qsf  utilization_quartus.md
host/: README.md  pyproject.toml
host/fpgapa_scope/: __init__.py  cli.py  csr.py  frame.py  jtag.py  probes.py  reorder.py  rle.py  scope.py  sigrok.py  vcd.py
host/tests/: conftest.py  cosim_util.py  soak.py  test_cli.py  test_cosim.py  test_decode.py  test_frame.py  test_jtag.py  test_sigrok.py  test_vcd.py
rtl/: scope_core.sv  scope_csr.sv  scope_drain.sv  scope_pkg.sv  scope_rle.sv  scope_top.sv  scope_trigger.sv
rtl/if/: scope_avalon.sv  scope_axil.sv  scope_jtag.sv
rtl/prim/: prim_ff_sync.sv  prim_fifo_async.sv  prim_fifo_sync.sv  (+1 more)
sim/: cosim_io.cpp  run.sh  soak.sh  tb_capture_basic.sv  tb_cosim.sv  tb_csr.sv  tb_csr_if.sv  tb_drain_cdc.sv  tb_ext_trig.sv  tb_jtag.sv  tb_pretrig.sv  tb_prim_fifo_async.sv  tb_prim_fifo_sync.sv  tb_prim_ram.sv  tb_rle.sv  tb_smoke.sv  tb_trigger_cmp.sv  tb_trigger_seq.sv  tb_uart.sv  tb_windows.sv
(+6 files in other folders)
